              DATA_MIN: 0
              MU: ...

- The PHASE virtual image no longer ties the existence of a datum to a
  positive cosine of the emission of the angle (mu), meaning cosine of
  phase angle data will be plotted in areas of the map where mu < 0.

- Improved speed of MU, MU0 and PHASE virtual image generation by up
  to 100% by dropping a redundant data "visibility" check.

- Corrected problem in conformal (Mercator and Polar Stereographic)
  maps that prevented calculation of latitudes for the entire map from
  completing in some cases.

- Dropped references to "transverse" in documentation related to the
  Mercator projection.  MaRC's Mercator projection is the regular
  variant not the transverse one.

- Improved accuracy of conformal maps through root finding
  improvements.

- Fixed memory violations in conformal maps.

20 August 2017 - MaRC 0.9.9

- Data generated by the MU, MU0, PHASE, LATITUDE and LONGITUDE virtual
  images are now automatically offset and scaled by the largest power
  of 10 suitable for maximizing the number of significant digits retained
  when storing their floating point values in integer typed maps.  For
  example, MU image data, which has a range of [-1, 1], will be scaled
  and offset to a range of [0, 200] for a map with BYTE (unsigned 8
  bit integer) data, [-10000, 10000] for a SHORT (signed 16 bit
  integer) data type map, and [-1e+09, 1e+09] for LONG (signed 32 bit
  integer) typed maps.

  The virtual image data is only automatically scaled and/or offset
  for integer typed maps.  They are not scaled or offset when creating
  maps with a floating point data type (DATA_TYPE of FLOAT or
  DOUBLE).

  The necessary scale and offset needed to obtain the true values of
  these virtual images in integer typed maps is now automatically
  written to the map FITS header as well.

  NOTE: The hardcoded scale value of 10000 for the MU, MU0 and PHASE
        virtual images that existed in previous versions of MaRC has